Fixed recipient spacing and added hidden input to hold value of recipients JSON string.

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -111,6 +111,7 @@ body{
      font-weight: 500;
      line-height: 2rem;
      margin-left: 0.5rem;
+     width: calc(100% - 40px);
 }
 
 .send-email-group-btn {
